crates/spelldawn/tests/it/rules/snapshots/it__rules__raid_tests__activate_room.snap
---
source: crates/spelldawn/tests/it/rules/raid_tests.rs
assertion_line: 117
expression: "Summary::summarize(&response)"
---

command_list: 
    UpdateGameView: 
        user: 
            side: Overlord
            mana: 996
        current_priority: Opponent
        raid_active: true
    CreateOrUpdateCard: 
        card: 
            card_id: O44
            revealed_to_viewer: true
            is_face_up: true
            owning_player: User
        create_position: 
            sorting_key: 4
            position: ObjectPositionRoom { room_id: RoomA, room_location: Front }
        create_animation: Unspecified
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "Waiting for Opponent..."
        card_anchor_nodes: 
channel_response: 
    UpdateGameView: 
        opponent: 
            side: Overlord
            mana: 996
        current_priority: User
        raid_active: true
    CreateOrUpdateCard: 
        card: 
            card_id: O44
            revealed_to_viewer: true
            is_face_up: true
            card_icons: 
                top_left_icon: "3"
                bottom_right_icon: "5"
            owning_player: Opponent
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Minion Alpha"
                rules_text: "<RulesText>"
                targeting: 
                valid_rooms: 
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionRoom { room_id: Unspecified, room_location: Front }
        create_position: 
            sorting_key: 4
            position: ObjectPositionRoom { room_id: RoomA, room_location: Front }
        create_animation: Unspecified
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "Test Weapon 3 Attack 12 Boost 3 Cost\n1\u{f06d}"
                text: "Continue"
        card_anchor_nodes: 
