crates/spelldawn/tests/it/rules/snapshots/it__rules__raid_tests__complete_raid.snap
---
source: crates/spelldawn/tests/it/rules/raid_tests.rs
assertion_line: 371
expression: "Summary::run(&response)"

---

command_list: 
    UpdateGameView: 
        opponent: 
            side: Overlord
            action_tracker: 3
        current_priority: Opponent
        raid_active: false
    MoveGameObjects: 
        id: Identity(User)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: User }
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
    DisplayGameMessage: Dusk
channel_response: 
    UpdateGameView: 
        user: 
            side: Overlord
            action_tracker: 3
        current_priority: User
        raid_active: false
    MoveGameObjects: 
        id: Identity(Opponent)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: Opponent }
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
    DisplayGameMessage: Dusk
