crates/spelldawn/tests/it/rules/snapshots/it__rules__raid_tests__fire_combat_ability.snap
---
source: crates/spelldawn/tests/it/rules/raid_tests.rs
assertion_line: 290
expression: "Summary::run(&response)"

---

command_list: 
    FireProjectile: 
        source_id: CardIdentifier { side: Overlord, index: 2 }
        target_id: Identity(User)
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        current_priority: User
        raid_active: false
    MoveGameObjects: 
        id: CardIdentifier { side: Overlord, index: 1 }
        position: 
            sorting_key: 2
            position: ObjectPositionRoom { room_id: RoomA, room_location: Back }
    MoveGameObjects: 
        id: CardIdentifier { side: Overlord, index: 2 }
        position: 
            sorting_key: 4
            position: ObjectPositionRoom { room_id: RoomA, room_location: Front }
    MoveGameObjects: 
        id: Identity(User)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: User }
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
channel_response: 
    FireProjectile: 
        source_id: CardIdentifier { side: Overlord, index: 2 }
        target_id: Identity(Opponent)
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        current_priority: Opponent
        raid_active: false
    MoveGameObjects: 
        id: CardIdentifier { side: Overlord, index: 1 }
        position: 
            sorting_key: 2
            position: ObjectPositionRoom { room_id: RoomA, room_location: Back }
    MoveGameObjects: 
        id: CardIdentifier { side: Overlord, index: 2 }
        position: 
            sorting_key: 4
            position: ObjectPositionRoom { room_id: RoomA, room_location: Front }
    MoveGameObjects: 
        id: Identity(Opponent)
        position: 
            sorting_key: 0
            position: ObjectPositionIdentityContainer { owner: Opponent }
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
