crates/spelldawn/tests/it/rules/snapshots/it__rules__raid_tests__raid_no_occupants.snap
---
source: crates/spelldawn/tests/it/rules/raid_tests.rs
assertion_line: 525
expression: "Summary::summarize(&response)"

---

command_list: 
    FireProjectile: 
        source_id: C45
        target_id: O45
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        user: 
            side: Champion
            mana: 995
        current_priority: User
        raid_active: true
    RunInParallel: 
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 2
                position: ObjectPositionRoom { room_id: RoomA, room_location: Front }
        MoveGameObjects: 
            id: Identity(User)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: User }
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "End Raid"
        card_anchor_nodes: 
channel_response: 
    FireProjectile: 
        source_id: C45
        target_id: O45
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        opponent: 
            side: Champion
            mana: 995
        current_priority: Opponent
        raid_active: true
    RunInParallel: 
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 2
                position: ObjectPositionRoom { room_id: RoomA, room_location: Front }
        MoveGameObjects: 
            id: Identity(Opponent)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: Opponent }
