crates/spelldawn/tests/it/rules/snapshots/it__rules__raid_tests__raid_two_defenders_advance.snap
---
source: crates/spelldawn/tests/it/rules/raid_tests.rs
assertion_line: 608
expression: "Summary::summarize(&response)"

---

command_list: 
    UpdateGameView: 
        opponent: 
            side: Overlord
            mana: 995
        current_priority: User
        raid_active: true
    CreateOrUpdateCard: 
        card: 
            card_id: O45
            card_icons: 
                top_left_icon: "3"
                bottom_right_icon: "5"
            owning_player: Opponent
            revealed_card: 
                card_frame: "<SpriteAddress>"
                title_background: "<SpriteAddress>"
                jewel: "<SpriteAddress>"
                image: "<SpriteAddress>"
                title: "Test Minion Alpha"
                rules_text: "<RulesText>"
                revealed_in_arena: true
                targeting: "PickRoom"
                on_release_position: 
                    sorting_key: 4294967295
                    position: ObjectPositionRoom { room_id: Unspecified, room_location: Front }
                can_play: false
        create_position: 
            sorting_key: 2
            position: ObjectPositionRoom { room_id: Vault, room_location: Front }
        create_animation: Unspecified
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "Test Weapon 3 Attack 12 Boost 3 Cost\n1\u{f06d}"
                text: "Continue"
        card_anchor_nodes: 
channel_response: 
    UpdateGameView: 
        user: 
            side: Overlord
            mana: 995
        current_priority: Opponent
        raid_active: true
    CreateOrUpdateCard: 
        card: 
            card_id: O45
            owning_player: User
            revealed_card: 
                revealed_in_arena: true
                can_play: false
        create_position: 
            sorting_key: 2
            position: ObjectPositionRoom { room_id: Vault, room_location: Front }
        create_animation: Unspecified
